<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activity titles -->
    <string name="app_name">My Contacts</string>
    <string name="title_activity_view_contact">View Contact</string>
    <string name="title_activity_add_contact">Add Contact</string>
    <string name="title_activity_edit_contact">Edit Contact</string>
    <string name="title_activity_add_address">Add Address</string>
    <string name="title_activity_edit_address">Edit Address</string>
    <string name="title_section_adresses">Addresses</string>

    <!-- Menu buttons -->
    <string name="action_settings">Settings</string>
    <string name="action_add_contact">Add</string>
    <string name="action_delet_all_contact">Delete All</string>
    <string name="action_edit_contact">Edit</string>
    <string name="action_accept_contact">Save</string>
    <string name="action_cancel_changes">Cancel</string>
    <string name="search_hint">Search My Contacts</string>

    <!-- Activity buttons -->
    <string name="button_add_address">Add Address</string>
    <string name="button_delete_contact">Delete Contact</string>
    <string name="button_delete_address">Delete Address</string>

    <!-- Contact fields hints -->
    <string name="hint_full_name">Full Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_cell_phone">Cell Phone</string>
    <string name="hint_work_phone">Work Phone</string>
    <string name="hint_email">Email</string>

    <!-- Address fields hints -->
    <string name="hint_address_name">Name</string>
    <string name="hint_address_street">Street</string>
    <string name="hint_address_number">Number</string>
    <string name="hint_address_city">City</string>
    <string name="hint_address_state">State</string>
    <string name="hint_address_zip_code">Zip Code</string>

    <!-- Confirmation dialogs messages -->
    <string name="dialog_title_save_contact">Contact Save</string>
    <string name="dialog_message_save_contact">You must provide a name for your contact.</string>
    <string name="dialog_title_save_address">Address Save</string>
    <string name="dialog_message_save_address">You must provide a name for the address.</string>
    <string name="dialog_title_delete">Confirm Delete</string>
    <string name="dialog_message_delete_contact">Are you sure you want to delete this contact?</string>
    <string name="dialog_message_delete_address">Are you sure you want to delete this address?</string>
    <string name="dialog_message_delete_all_contacts">Are you sure you want to delete all your contacts?</string>
    <string name="dialog_confirm">Okay</string>
    <string name="dialog_affirm">Yes</string>
    <string name="dialog_deny">No</string>

    <!-- Toast messages -->
    <string name="toast_contact_saved">Contact successfully saved!</string>
    <string name="toast_address_saved">Address successfully saved!</string>
    <string name="toast_contact_deleted">Contact deleted.</string>
    <string name="toast_address_deleted">Address deleted.</string>
    <string name="toast_all_contacts_deleted">All My Friends Are Dead (8)</string>

</resources>