<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding" >

    <TextView
        android:id="@+id/display_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/large_separator_margin"
        android:text="@string/hint_full_name"
        android:textSize="@dimen/huge_font_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/large_separator_margin"
            android:text="@string/hint_cell_phone" />

        <TextView
            android:id="@+id/display_cell_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:text="@string/hint_cell_phone"
            android:textSize="@dimen/medium_font_size"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/large_separator_margin"
            android:text="@string/hint_work_phone" />

        <TextView
            android:id="@+id/display_work_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:text="@string/hint_work_phone"
            android:textSize="@dimen/medium_font_size"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/large_separator_margin"
            android:text="@string/hint_email" />

        <TextView
            android:id="@+id/display_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:text="@string/hint_email"
            android:textSize="@dimen/medium_font_size"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_separator_margin"
        android:text="@string/title_section_adresses"
        android:textSize="@dimen/large_font_size"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/addresses_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:listSelector="@android:color/transparent" >
    </ListView>

</LinearLayout>